ajustes al notebook en sección de git

--- a/Sesion2/Sesion2.ipynb
+++ b/Sesion2/Sesion2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sesión numero 2 curso Python<!-- omit in toc -->\n",
+    "# Sesión número 2 curso Python<!-- omit in toc -->\n",
     "\n",
     "- Breve historia de la computación, Python y el pensamiento computacional\n",
     "- Que es un lenguaje de programación\n",
@@ -94,7 +94,79 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## ¿Qué es un lenguaje de programación?\n",
+    "\n",
+    "Es un lenguaje formal que, mediante una serie de instrucciones, le permite a un programador escribir un conjunto de órdenes, acciones consecutivas, datos y algoritmos para, de esa forma, crear programas que controlen el comportamiento físico y lógico de una máquina.\n",
+    "\n",
+    "- ¿Qué tipos de lenguaje de programación existen?\n",
+    "\n",
+    "El lenguaje de programación es la base para construir todas las aplicaciones digitales que se utilizan en el día a día y se clasifican en dos tipos principales: lenguaje de bajo nivel y de alto nivel.\n",
+    "\n",
+    "- Lenguaje de programación de bajo nivel\n",
+    "\n",
+    "Son lenguajes totalmente orientados a la máquina.\n",
+    "\n",
+    "- Este lenguaje sirve de interfaz y crea un vínculo inseparable entre el hardware y el software.\n",
+    "\n",
+    "\n",
+    "- Además, ejerce un control directo sobre el equipo y su estructura física. Para aplicarlo adecuadamente es necesario que el programador conozca sólidamente el hardware. Éste se subdivide en dos tipos:\n",
+    "\n",
+    "\n",
+    "- Lenguaje máquina\n",
+    "Es el más primitivo de los lenguajes y es una colección de dígitos binarios o bits (0 y 1) que la computadora lee e interpreta y son los únicos idiomas que las computadoras entienden.\n",
+    "\n",
+    "Ejemplo: 10110000 01100001\n",
+    "\n",
+    "No entendemos muy bien lo que dice ¿verdad? Por eso, el lenguaje ensamblador nos permite entender mejor a qué se refiere éste código.\n",
+    "\n",
+    "- Lenguaje ensamblador\n",
+    "\n",
+    "El lenguaje ensamblador es el primer intento de sustitución del lenguaje de máquina por uno más cercano al utilizado por los humanos.\n",
+    "\n",
+    "Un programa escrito en éste lenguaje es almacenado como texto (tal como programas de alto nivel) y consiste en una serie de instrucciones que corresponden al flujo de órdenes ejecutables por un microprocesador.\n",
+    "\n",
+    "Sin embargo, dichas máquinas no comprenden el lenguaje emsamblador, por lo que se debe convertir a lenguaje máquina mediante un programa llamado Ensamblador.\n",
+    "\n",
+    "Este genera códigos compactos, rápidos y eficientes creados por el programador que tiene el control total de la máquina.\n",
+    "\n",
+    "Ejemplo: MOV AL, 61h (asigna el valor hexadecimal 61 al registro “AL”)\n",
+    "\n",
+    "- Lenguaje de programación de alto nivel\n",
+    "\n",
+    "Tienen como objetivo facilitar el trabajo del programador, ya que utilizan unas instrucciones más fáciles de entender.\n",
+    "\n",
+    "Además, el lenguaje de alto nivel permite escribir códigos mediante idiomas que conocemos (español, inglés, etc.) y luego, para ser ejecutados, se traduce al lenguaje de máquina mediante traductores o compiladores.\n",
+    "\n",
+    "- Traductor\n",
+    "\n",
+    "Traducen programas escritos en un lenguaje de programación al lenguaje máquina de la computadora y a medida que va siendo traducida, se ejecuta.\n",
+    "\n",
+    "- Compilador\n",
+    "\n",
+    "Permite traducir todo un programa de una sola vez, haciendo una ejecución más rápida y puede almacenarse para usarse luego sin volver a hacer la traducción."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuración de VS Code (extensiones)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![extensiones](media/extensiones.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio practico en la sesión de configuración de repo github"
+   ]
   }
  ],
  "metadata": {
