Versión actualziada del notebook sesión 3

--- a/Sesion3/Sesion3.ipynb
+++ b/Sesion3/Sesion3.ipynb
@@ -14,13 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,12 +380,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Cuales son las palabras reservadas?\n",
+    "\n",
+    "Python me permite identificar cuales son estas palabras, son las únicas que no puedo usar para asignar variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keyword\n",
+    "print(keyword.kwlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La notacion de variables usando camlecase es una practica recomendada que luego revisaremos a detalle cuando veamos pep-8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "camelCase = \"Ejm camel case\""
+    "camelCase = \"Ejemplo de una variable nombrada con estilo camel case, se colocan en minusculas y mayusculas: camelCase\""
    ]
   },
   {
