--- a/Sesion4/sesion4.ipynb
+++ b/Sesion4/sesion4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "mensaje = 'Hello world'\n",
+    "mensaje = \"Hello world\"\n",
     "\n",
     "print('Hola mundo')"
    ]
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-a7cab52dbd36>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-37-a7cab52dbd36>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-a7cab52dbd36>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    mensaje = 'mi seudo nombre es 'testing''\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-a7cab52dbd36>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    mensaje = 'mi seudo nombre es 'testing''\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -122,23 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mensaje = \"\"\"mi seudo nombre es 'testing'\"\"\""
+    "mensaje = \"\"\"mi 'seudo' nombre es 'testing'\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mi seudo nombre es 'testing'\n"
+      "mi 'seudo' nombre es 'testing'\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "8"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -203,19 +203,50 @@
     }
    ],
    "source": [
-    "print (mensaje[0])"
+    "print (mensaje[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "o\n",
+      "n\n",
+      "g\n",
+      "i\n",
+      "t\n",
+      "u\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (mensaje[0])\n",
+    "print (mensaje[1])\n",
+    "print (mensaje[2])\n",
+    "print (mensaje[3])\n",
+    "print (mensaje[4])\n",
+    "print (mensaje[5])\n",
+    "print (mensaje[6])\n",
+    "print (mensaje[7])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "si coloco un inice que no existe, obtengo un error de indice fuera de lista"
+    "si coloco un indice que no existe, obtengo un error de indice fuera de lista"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +256,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-72c3da97ad77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmensaje\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-48-72c3da97ad77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmensaje\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m: string index out of range"
      ]
     }
@@ -243,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +391,27 @@
     }
    ],
    "source": [
-    "print (mensaje.count('Hola'))"
+    "print (mensaje.count(''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hl ud'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mensaje[::2]"
    ]
   },
   {
@@ -372,29 +423,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method_descriptor:\n",
+      "Help on built-in function maketrans:\n",
       "\n",
-      "lower(self, /)\n",
-      "    Return a copy of the string converted to lowercase.\n",
+      "maketrans(x, y=None, z=None, /)\n",
+      "    Return a translation table usable for str.translate().\n",
+      "    \n",
+      "    If there is only one argument, it must be a dictionary mapping Unicode\n",
+      "    ordinals (integers) or characters to Unicode ordinals, strings or None.\n",
+      "    Character keys will be then converted to ordinals.\n",
+      "    If there are two arguments, they must be strings of equal length, and\n",
+      "    in the resulting dictionary, each character in x will be mapped to the\n",
+      "    character at the same position in y. If there is a third argument, it\n",
+      "    must be a string, whose characters will be mapped to None in the result.\n",
       "\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "print(help(str.lower))"
+    "print(help(str.maketrans))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +493,7 @@
    "source": [
     "saludo = 'Hola'\n",
     "Nombre = 'Fabian'\n",
-    "mensaje_saludo = saludo +' '+Nombre\n",
+    "mensaje_saludo = saludo + ' ' + Nombre\n",
     "print (mensaje_saludo)"
    ]
   },
@@ -442,12 +501,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Formatando el texto"
+    "Formateando el texto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -464,6 +523,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola ejemplo con indices Fabian\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"{} ejemplo con indices {}\".format(saludo, Nombre)\n",
+    "print (message)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +562,24 @@
    ],
    "source": [
     "print (dir (Nombre))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejemplo = mensaje.endswith(\"o\")\n",
+    "print(ejemplo)"
    ]
   }
  ],
