--- a/Sesion5/Sesion5.ipynb
+++ b/Sesion5/Sesion5.ipynb
@@ -18,16 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    " entero = 3"
+    " entero = 3\n",
+    " print(entero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -44,16 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
-    "flotante = 3.14"
+    "flotante = 3.14\n",
+    "print(flotante )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +133,7 @@
        "50.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +145,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "750"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "125*6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150.0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "750/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "150//3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "750"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6*125"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -136,14 +254,13 @@
        "-676.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Ejm:\n",
-    "\n",
     "15/3*(7+(68-15*33+(45**2/5)/3)/2)+19"
    ]
   },
@@ -156,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +292,26 @@
     "num_2 = int(num_2)\n",
     "\n",
     "print(num_1 + num_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(2**2)+(8/2)"
    ]
   },
   {
@@ -205,11 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ejecucion de operadores"
+    "# ejecucion de operadores\n",
+    "3 <= 3"
    ]
   },
   {
@@ -221,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -399,32 +548,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14\n"
+      "3.16\n"
      ]
     }
    ],
    "source": [
-    "numero = 3.14\n",
+    "numero = 3.16\n",
     "print (numero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1\n"
+      "3.2\n"
      ]
     }
    ],
