--- a/Sesion6/Sesion6.ipynb
+++ b/Sesion6/Sesion6.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -34,30 +34,12 @@
    "source": [
     "# Listas vacias\n",
     "empty_list = []\n",
-    "print (type (empty_list))"
+    "print (type (empty_list))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "empty_list = list()\n",
-    "print (type (empty_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +234,7 @@
      "text": [
       "one\n",
       "two\n",
-      "three\n",
+      "New item\n",
       "four\n",
       "five\n"
      ]
@@ -267,13 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['one', 'two', 'three', 'four', 'five']\n",
       "['one', 'Hello', 'Seven', 'four', 'five']\n"
      ]
     }
@@ -281,13 +264,14 @@
    "source": [
     "#Cortar una lista:\n",
     "mylist = ['one', 'two', 'three', 'four', 'five']\n",
+    "print(mylist)\n",
     "mylist[1:3] = ['Hello', 'Seven']\n",
     "print(mylist)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +383,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['arandanos', 'banano', 'manzana', 'pera', 'uva']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"pera\",\"manzana\",\"uva\",\"arandanos\",\"banano\"]\n",
+    "frutas.sort()\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +463,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['one', 'two', 'four', 'five']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +490,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['one', 'four']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +573,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio\n",
+    "Plantear un ejemplo de dos listas que si coincidan en sus elemtnos, que sean iguales"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
