notebook actulizado con la información vista en la sesión

--- a/Sesion11/Sesion11_Funciones.ipynb
+++ b/Sesion11/Sesion11_Funciones.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "Ya hermos visto conceptos importantes que nos van a permitir empezar a resolver problemas:\n",
-    "* Conocemos los tipos de datos con los cuales puedo modelar computacionalmente un algoritmo (strings, int, float, booleanos, listas, tuplas)\n",
+    "* Conocemos los tipos de datos con los cuales puedo modelar computacionalmente un algoritmo (strings, int, float, booleanos, listas, tuplas, diccionarios)\n",
     "* Sabemos como tomar decisiones (if, elif, else)\n",
     "* Sabemos como iterar (for, while loops) para poder aprovechar el poder de la recursividad computacional."
    ]
@@ -33,7 +33,7 @@
     "# Abstracción\n",
     "\n",
     "No necesito saber internamente como funciona algo para poderlo utilizar.\n",
-    "Quiero saber como y cuando utilizar código. Aquí viene lo importante: **Las funciones me permiten aislar código para poder utilziarlo sin preocuparme por como está construido internamente**"
+    "Quiero saber como y cuando utilizar código. Aquí viene lo importante: **Las funciones me permiten aislar código para poder utilizarlo sin preocuparme por como está construido internamente**"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "'Hola mundo'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las funciones son **bloques de código que se pueden reutilizar simplemente llamando a la función. Esto permite la reutilización de código simple y elegante sin volver a escribir explícitamente secciones de código**. Esto hace que el código sea más legible, facilita la depuración y limita los errores de escritura."
+    "Las funciones son **bloques de código que se pueden reutilizar simplemente llamando a la función. Esto permite la reutilización de código simple y elegante sin volver a escribir explícitamente secciones de código**. DRY (dont repeat yourself) Esto hace que el código sea más legible, facilita la depuración y limita los errores de escritura."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La programación estruturada (ejemplos de problemas resuletos hasta el momento) me permite resover problemas, pero es dificil de mantener este código en el tiempo"
+    "La programación estruturada (ejemplos de problemas resueltos hasta el momento) me permite resover problemas, pero es dificil de mantener este código en el tiempo"
    ]
   },
   {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +170,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.5"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma (7,7.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma ([2,3],[4,5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -214,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def saludar(mañana = None, tarde = None, noche = None): # parametros con palabras reservadas\n",
+    "def saludar(mañana = False, tarde = None, noche = None): # parametros con palabras reservadas\n",
     "    if mañana:\n",
     "        return (\"Buen dia\")\n",
     "    elif tarde:\n",
@@ -231,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +280,7 @@
        "'No ingresaste un momento del dia para saludar. Hasta luego'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mañana = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -260,18 +309,18 @@
        "'Buen dia'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saludar(mañana= True)"
+    "saludar(mañana)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +329,7 @@
        "'Buena tarde'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +349,7 @@
        "'Buena noche'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,22 +360,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Buen dia'"
+       "'Buena tarde'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saludar(\"noche\")"
+    "saludar(False,True)"
    ]
   },
   {
@@ -338,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,18 +406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "{}\n"
+     ]
     }
    ],
    "source": [
@@ -377,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -430,31 +477,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sumar(a, b): #recibe un parametro a y un parametro b Estos paraámetros son posicionales\n",
-    "  return a + b"
+    "  return a + b\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculadora_suma (a,b,suma = None):\n",
-    "    if suma:\n",
-    "        print (\"vamos a sumar tus valores ingresados: {0}, {1}\".format(a,b))\n",
-    "        resultado = sumar(a,b)\n",
-    "        print (\"El resultado es: {0}\".format(resultado))\n",
-    "        return resultado\n"
+    "def multiplicar(a,b):\n",
+    "  return a*b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculadora_suma (c,d,suma = None, multiplica =None):\n",
+    "    resultadoSuma = None\n",
+    "    resultadoMultiplica = None\n",
+    "    if suma and multiplica:\n",
+    "        print (\"vamos a sumar tus valores ingresados: {0}, {1}\".format(c,d))\n",
+    "        resultadoSuma = sumar(c,d)\n",
+    "        print (\"vamos a multiplicar tus valores ingresados: {0}, {1}\".format(c,d))\n",
+    "        resultadoMultiplica = multiplicar(c,d)\n",
+    "    else:\n",
+    "        if suma:\n",
+    "            print (\"vamos a sumar tus valores ingresados: {0}, {1}\".format(c,d))\n",
+    "            resultadoSuma = sumar(c,d) \n",
+    "            print (\"El resultado es: {0}\".format(resultadoSuma))\n",
+    "\n",
+    "        elif multiplica:\n",
+    "            print (\"vamos a multiplicar tus valores ingresados: {0}, {1}\".format(c,d))\n",
+    "            resultadoMultiplica = multiplicar(c,d) \n",
+    "            print (\"El resultado es: {0}\".format(resultadoMultiplica))\n",
+    "    \n",
+    "\n",
+    "    return (resultadoSuma,resultadoMultiplica)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -468,16 +542,72 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "(7, None)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calculadora_suma(5,2, suma= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vamos a multiplicar tus valores ingresados: 5, 2\n",
+      "El resultado es: 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, 10)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_suma(5,2, multiplica= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vamos a sumar tus valores ingresados: 5, 2\n",
+      "vamos a multiplicar tus valores ingresados: 5, 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(7, 10)"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora_suma(5,2, suma= True, multiplica= True)"
    ]
   },
   {
